--- a/src/sass/reset.scss
+++ b/src/sass/reset.scss
@@ -48,6 +48,11 @@ textarea {
   margin: 0;
   outline: none;
 }
+button {
+  &:hover {
+    cursor: pointer;
+  }
+}
 
 html {
   box-sizing: border-box;
