--- a/src/components/molecules/Navbar/Navbar.scss
+++ b/src/components/molecules/Navbar/Navbar.scss
@@ -8,7 +8,6 @@ nav {
     display: block;
     width: 18%;
     height: 100vh;
-    overflow: hidden;
   }
   .github-toggle {
     display: flex;
@@ -21,9 +20,9 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 78vh;
+    height: 80vh;
     .logo-sneakers {
-      margin: 30px 0;
+      margin: 50px 0;
       &:hover {
         transform: scale(1.1);
         transition-duration: 0.2s;
@@ -36,11 +35,8 @@ nav {
       .link {
         display: flex;
         align-items: center;
-        padding: 12px 40px;
+        padding: 12px 0 12px 30px;
         margin-bottom: 10px;
-        @include media(minilaptop) {
-          padding: 10px 30px;
-        }
         h2 {
           padding-left: 20px;
         }
@@ -66,7 +62,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 10vh;
+    height: 8vh;
     h2 {
       cursor: pointer;
       font-family: "Poppins-Bold";
