Carousel Component :fire:

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,5 @@
 @import "./sass/variables.scss";
 @import "./sass/mixins.scss";
 @import "./sass/fonts.scss";
+
+@import "react-slideshow-image/dist/styles.css";
